--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-standalone": "^6.26.0",
     "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
     "local-web-server": "^2.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
