--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
-version: '2.3'
+version: "2"
 services:
   necro:
-    build: .
-    ports:
-      - "8080:8080"
+    image: "node:9"
+    user: "node"
+    working_dir: /home/node/app
+    environment:
+      - NODE_ENV=production
     volumes:
-      - .:/src
-    tty: true
-    command: bash -c "npm install && npm start"
+      - ./:/home/node/app
+    expose:
+      - "3000"
+    ports:
+      - "3000:3000"
+    command: "yarn start"
