--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "necro",
-  "version": "1.0.0",
-  "description": "Necromunda Gang Roster",
-  "main": "index.js",
-  "scripts": {
-    "start": "ws -d public -p 8080"
-  },
-  "author": "Andrew Todd",
-  "license": "ISC",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-standalone": "^6.26.0",
-    "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1",
-    "local-web-server": "^2.3.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.1",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-inline-editable-field": "^1.0.6",
+    "react-scripts": "1.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
